# cpp_primer

./: .gitignore
ch_01/exer_1_20/: CMakeLists.txt  run.sh
ch_01/exer_1_20/etc/: books_data.txt
ch_01/exer_1_20/source/: main.cpp
